2005-11-11  Mark Spencer <markster@digium.com>

	* channels/chan_zap.c (zt_bridge): only enable/disable DTMF detection on SUB_REAL channels

2005-11-10  Kevin P. Fleming  <kpfleming@digium.com>

	* channels/chan_iax2.c: ensure that system headers that provide basic types are included first (issue #5713)

2005-11-11  Russell Bryant  <russell@digium.com>

	* many files in apps/: Clean up application descriptions. Clarify some wording and make sure they wrap at 80 characters.

2005-11-10  Mark Spencer <markster@digium.com>

	* rtp.c (ast_rtp_raw_write): use unsigned int for return value from calc_txstamp() (issue #5595)
	(calc_txstamp): never return a value that was less than zero before being turned into 'unsigned int' (issue #5595)

2005-11-10  Kevin P. Fleming  <kpfleming@digium.com>

	* include/asterisk/chanspy.h: move spy-related stuff into separate header so chan_h323 can build (issue #5590)

	* include/asterisk/linkedlists.h (AST_LIST_HEAD_SET_NOLOCK): properly initialize tail pointer when list head is directly set (issue #5669)

	* app.c (ast_app_parse_options): ok, so we aren't all perfect... let's make the while loop actually work properly here (issue #5684)

	* apps/app_disa.c (disa_exec): correct password file parsing (issue #5676)

	* apps/app_meetme.c (conf_run): don't restrict admin users from joining a locked conference (issue #5680)

	* channels/chan_misdn.c: include stdio.h (issue #5671)
	* channels/chan_misdn_config.c: fix prototype warning (issue #5671)

	* pbx.c: remove apps that were deprecated before 1.0 was released (issue #5673)

	* apps/app_striplsd.c, apps/app_substring.c: remove apps that were deprecated before 1.0 was released (issue #5673)

	* include/asterisk/lock.h (PTHREAD_MUTEX_RECURSIVE_NP): work around header problems on Cygwin (issue #5668)

	* pbx/pbx_ael.c: handle switch default cases inside macros properly (issue #5354)
